changed theme on the rest of the pages and fixed a typo

--- a/app/templates/nav-bar.html
+++ b/app/templates/nav-bar.html
@@ -21,7 +21,7 @@
                     <a class="nav-link" href="./tests.html">Тестове</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contacts.html">Констакти</a>
+                    <a class="nav-link" href="./contacts.html">Контакти</a>
                 </li>
             </ul>
 
