--- a/app/templates/nav-bar.html
+++ b/app/templates/nav-bar.html
@@ -20,8 +20,17 @@
                 <li class="nav-item">
                     <a class="nav-link" href="./tests.html">Тестове</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="./contacts.html">Контакти</a>
+
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="contacts">Контакти
+                        <span class="caret"></span>
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="themes">
+                        <a class="dropdown-item" href="./about_us.html">За нас</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="./faq.html">Често задавани въпроси</a>
+                    </div>
                 </li>
             </ul>
 
