--- a/app/templates/nav-bar.html
+++ b/app/templates/nav-bar.html
@@ -26,7 +26,7 @@
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" id="contacts">Контакти
                         <span class="caret"></span>
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="themes">
+                    <div class="dropdown-menu" aria-labelledby="contacts">
                         <a class="dropdown-item" href="./about_us.html">За нас</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="./faq.html">Често задавани въпроси</a>
