added content for both types of lessons and some css between different lesson sections

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -41,6 +41,12 @@
 
 #data-list div {
     margin-left: 10px;
+    width: 600px;
+}
+
+.data-list-item {
+    padding-left: 30px;
+    margin-bottom: 20px;
 }
 
 .hidden {
