--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -49,8 +49,14 @@
     margin-bottom: 20px;
 }
 
+.data-list-items {
+    max-height: 5000px;
+    transition: max-height 0.4s ease-in-out;
+    overflow: hidden;
+}
+
 .hidden {
-    display: none
+  max-height: 0;
 }
 
 p.faq {
